--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -6,7 +6,7 @@ Client:
 Project: Website 1.0
 Designers: Emerson Taymor and Skot Carruth
 
-© all work is an act of philosophie
+ï¿½ all work is an act of philosophie
 
 ===COLOR SCHEME===
 
