--- a/skin/frontend/default/rooja/css/login.css
+++ b/skin/frontend/default/rooja/css/login.css
@@ -137,3 +137,7 @@ strong{font-weight:bold;}
 /* ~~~~~ Advanced Login Classes - AM edit ~~~~~ */
 #notifyWrapper .validation-advice {margin: 0 0 10px;}
 #notifyWrapper #submitBtn {float: right;width: 99px;background: #271D2A;color: #fff;text-align: center;font-weight: normal;}
+.register h3.legend {font-size: 14px;margin: 10px 0;}
+.register label {font-size: 12px;}
+.input-box {margin: 5px 0;}
+.register .checkbox {float: left;width: 20px;margin: 0 10px 0;}
