--- a/app/design/frontend/default/rooja/template/page/html/head.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/head.phtml
@@ -30,8 +30,17 @@
 <meta name="keywords" content="<?php echo htmlspecialchars($this->getKeywords()) ?>" />
 <meta name="robots" content="<?php echo htmlspecialchars($this->getRobots()) ?>" />
 <!--start Facebook Open Graph Protocol-->
-<meta property="og:title" content="<?php echo $this->getTitle() ?>"/>
-<!--end Facebook Open Graph Protocol-->
+    <meta property="og:title" content="The Rock"/>
+    <meta property="og:type" content="movie"/>
+    <meta property="og:url" content="http://www.imdb.com/title/tt0117500/"/>
+    <meta property="og:image" content="http://ia.media-imdb.com/rock.jpg"/>
+    <meta property="og:site_name" content="IMDb"/>
+    <meta property="fb:admins" content="USER_ID"/>
+    <meta property="og:description"
+          content="A group of U.S. Marines, under command of
+                   a renegade general, take over Alcatraz and
+                   threaten San Francisco Bay with biological
+                   weapons."/><!--end Facebook Open Graph Protocol-->
 
 <link rel="icon" href="<?php echo $this->getFaviconFile(); ?>" type="image/x-icon" />
 <link rel="shortcut icon" href="<?php echo $this->getFaviconFile(); ?>" type="image/x-icon" />
