Test for OG meta info

--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -100,7 +100,7 @@ if (!$categoryIds == null){
 					<script type="text/javascript">
 						jQuery.noConflict();
 						jQuery(document).ready(function() {
-							alert('hi');
+							//alert('hi');
 							jQuery('head').append( 'XXXX' );
 
 						});
@@ -109,7 +109,7 @@ if (!$categoryIds == null){
 					                xfbml: true});
 					       FB.Event.subscribe('edge.create', function(response) {
 					             // do something with response
-					             alert('hi master');
+					            // alert('hi master');
 					             // ajax the price
 					             
 					             // if not empty, update the price.
