Test moving from head to product page....

--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -95,6 +95,8 @@ if (!$categoryIds == null){
 				
 				<div class="shareThis">
 					<p>Share this sale with your friends</p>
+<meta property="og:title" content="Rooja Product test" /> 
+
 					<p><fb:like title="testing"></fb:like></p>
 					
 					<script type="text/javascript">
