--- a/app/design/frontend/default/rooja/layout/page.xml
+++ b/app/design/frontend/default/rooja/layout/page.xml
@@ -49,7 +49,8 @@ Default layout, loads most of the pages
                 <action method="addJs"><script>varien/menu.js</script></action>
                 <action method="addJs"><script>mage/translate.js</script></action>
                 <action method="addJs"><script>mage/cookies.js</script></action>
-                
+                <action method="addJs"><script>jquery/jquerynoConflict.min.js</script></action>
+
                 <block type="page/js_cookie" name="js_cookies" template="page/js/cookie.phtml"/>
 
                 <action method="addCss"><stylesheet>css/reset.css</stylesheet></action>
