--- a/app/design/frontend/default/rooja/template/page/html/head.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/head.phtml
@@ -44,6 +44,17 @@
 <?php echo $this->helper('core/js')->getTranslatorScript() ?>
 <?php echo $this->getIncludes() ?>
 
+<script type="text/javascipt">
+//how to use non-conflict mode
+
+jQuery(function($){
+    // Use jQuery with $(...)
+    $('div').show();
+});
+// Use Prototype with $(...)
+ $('id').hide();
+</script>
+
 <!--start Facebook Open Graph Protocol-->
 <?php /* if (Mage::registry('current_product')) : ?>
 <meta property="og:image" content="<?php echo Mage::helper('catalog/image')->init(Mage::registry('current_product'), 'small_image')->resize(100,100);?>" />
