--- a/app/design/frontend/default/rooja/template/customer/dashboard/info.phtml
+++ b/app/design/frontend/default/rooja/template/customer/dashboard/info.phtml
@@ -24,39 +24,20 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-<div class="col2-set">
-    <div class="col-1">
-        <div class="box">
-            <div class="box-title">
+<section class="col2-set">
+    <section class="col-1">
+        <section class="box">
+            <section class="box-title">
                 <h3><?php echo $this->__('Contact Information') ?></h3>
                 <a href="<?php echo $this->getUrl('customer/account/edit') ?>"><?php echo $this->__('Edit') ?></a>
-            </div>
-            <div class="box-content">
+            </section>
+            <section class="box-content">
                 <p>
                     <?php echo $this->htmlEscape($this->getCustomer()->getName()) ?><br />
                     <?php echo $this->htmlEscape($this->getCustomer()->getEmail()) ?><br />
                     <a href="<?php echo $this->getChangePasswordUrl() ?>"><?php echo $this->__('Change Password') ?></a>
                 </p>
-            </div>
-        </div>
-    </div>
-    <?php if( $this->isNewsletterEnabled() ): ?>
-    <div class="col-2">
-        <div class="box">
-            <div class="box-title">
-                <h3><?php echo $this->__('Newsletters') ?></h3>
-                <a href="<?php echo $this->getUrl('newsletter/manage') ?>"><?php echo $this->__('Edit') ?></a>
-            </div>
-            <div class="box-content">
-                <p>
-                    <?php if( $this->getIsSubscribed() ): ?>
-                        <?php echo $this->__("You are currently subscribed to 'General Subscription'.") ?>
-                    <?php else: ?>
-                        <?php echo $this->__('You are currently not subscribed to any newsletter.') ?>
-                    <?php endif; ?>
-                </p>
-            </div>
-        </div>
-    </div>
-    <?php endif; ?>
-</div>
+            </section>
+        </section>
+    </section>
+</section>
