--- a/app/design/frontend/default/rooja/template/page/html/header.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/header.phtml
@@ -57,11 +57,12 @@
 <?php 
 $i = 1;
 $categories = Mage::helper('catalog/category')->getStoreCategories();
-$fivedays = date('y-m-d', strtotime("+5 days"));
+$fivedays = date('y-m-d H:G:00', strtotime("+5 days"));
+$today = date('y-m-d H:G:00');
 foreach ($categories as $_category){
     if($_category->hasChildren()){
     echo '<li><a href="'.$_category->getURL().'">' . $_category->getName() . '</a>';
-    echo '<div><ul><li class="navSectTitle">New Sales</li>';
+    echo '<div><ul>';
         $_category->getId(); // category id
         foreach($_category->getChildren() as $subcategory){
 		$c = Mage::getModel('catalog/category')->load($subcategory->getId());
@@ -70,14 +71,20 @@ foreach ($categories as $_category){
 	                $startdate = date('y-m-d', strtotime($c->getSale_start_date())) . ' ' . $c->getSale_start_time() . ':00';
 					$enddate = date('y-m-d', strtotime($c->getSale_end_date())) . ' ' . $c->getSale_end_time() . ':00';
 					//var_dump($c);
-					if ($enddate < $fivedays) {
-						echo '<li><a href="'. $c->getURL() .'">' . $c->getName() . '</a></li>';
-						$i++;
+					if ($enddate > $today && $enddate > $fivedays) {
+						if ($i == 1) {
+							echo '<li class="navSectTitle">New Sales</li>';
+							echo '<li><a href="'. $c->getURL() .'">' . $c->getName() . '</a></li>';
+						} else {
+							echo '<li><a href="'. $c->getURL() .'">' . $c->getName() . '</a></li>';
+						}
+					$i++;
 					}
 				}
             }
         }
-        echo '</ul><ul><li class="navSectTitle">Ending Soon</li>';
+        echo '</ul>';
+        $j = 1;
         foreach($_category->getChildren() as $subcategory){
 		$c = Mage::getModel('catalog/category')->load($subcategory->getId());
             if($c->getIsActive()){ // check if category is active
@@ -85,14 +92,19 @@ foreach ($categories as $_category){
 	                $startdate = date('y-m-d', strtotime($c->getSale_start_date())) . ' ' . $c->getSale_start_time() . ':00';
 					$enddate = date('y-m-d', strtotime($c->getSale_end_date())) . ' ' . $c->getSale_end_time() . ':00';
 					//var_dump($c);
-					if ($enddate > $fivedays) {
-						echo '<li><a href="'. $c->getURL() .'">' . $c->getName() . '</a></li>';
-						$i++;
+					if ($enddate > $today && $enddate < $fivedays) {
+						if ($j == 1) {
+							echo '<ul><li class="navSectTitle">Ending Soon</li>';
+							echo '<li><a href="'. $c->getURL() .'">' . $c->getName() . '</a></li>';
+						} else {
+							echo '<li><a href="'. $c->getURL() .'">' . $c->getName() . '</a></li>';
+						}
+					$j++;
 					}
 				}
             }
         }
-	echo '</div></li>';
+	echo '</ul></div></li>';
     }
 }
 ?>
