--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -396,3 +396,4 @@ a[href$=".doc"]:after {content: " (DOC)";}
 .product-options p.required {padding: 0;}
 .input-box {position: relative;}
 .discount .buttons-set {position: absolute;right:0;float: right;top:0;}
+.saleDetails a span {height: 105px;overflow: hidden;display: block;margin: 0 0 15px;}
