User dashboard blocks

--- a/app/design/frontend/base/default/template/customer/account/dashboard/address.phtml
+++ b/app/design/frontend/base/default/template/customer/account/dashboard/address.phtml
@@ -24,27 +24,38 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-<div class="col2-set">
+<div class="col1-set">
     <div class="box">
         <div class="box-title">
-            <h3><?php echo $this->__('Address Book') ?></h3>
-            <a href="<?php echo $this->getAddressBookUrl() ?>"><?php echo $this->__('Manage Addresses') ?></a>
+            <a href="<?php echo $this->getAddressBookUrl() ?>"><?php echo $this->__('Manage') ?></a>
         </div>
+
         <div class="box-content">
-            <div class="col-1">
-                <h4><?php echo $this->__('Default Billing Address') ?></h4>
-                <address>
-                    <?php echo $this->getPrimaryBillingAddressHtml() ?><br />
-                    <a href="<?php echo $this->getPrimaryBillingAddressEditUrl() ?>"><?php echo $this->__('Edit Address') ?></a>
-                </address>
-            </div>
-            <div class="col-2">
-                <h4><?php echo $this->__('Default Shipping Address') ?></h4>
-                <address>
-                    <?php echo $this->getPrimaryShippingAddressHtml() ?><br />
-                    <a href="<?php echo $this->getPrimaryShippingAddressEditUrl() ?>"><?php echo $this->__('Edit Address') ?></a>
-                </address>
-            </div>
+			<div class="col2-set">	                
+				<div class="col-1">
+					<p><?php echo $this->__('Billing') ?></p>
+				</div>
+
+                <div class="col-2">
+	                <address>
+	                    <?php echo $this->getPrimaryBillingAddressHtml() ?><br />
+	                    <a href="<?php echo $this->getPrimaryBillingAddressEditUrl() ?>"><?php echo $this->__('Edit Address') ?></a>
+	                </address>
+				</div>
+			</div>
+
+			<div class="col2-set">
+				<div class="col-1">
+                	<h4><?php echo $this->__('Shipping') ?></h4>
+				</div>
+			
+				<div class="col-2">
+	                <address>
+	                    <?php echo $this->getPrimaryShippingAddressHtml() ?><br />
+	                    <a href="<?php echo $this->getPrimaryShippingAddressEditUrl() ?>"><?php echo $this->__('Edit Address') ?></a>
+	                </address>
+				</div>
+			</div> 	
         </div>
     </div>
 </div>
