--- a/app/design/frontend/base/default/template/customer/account/dashboard/info.phtml
+++ b/app/design/frontend/base/default/template/customer/account/dashboard/info.phtml
@@ -22,13 +22,15 @@
  * @package     base_default
  * @copyright   Copyright (c) 2010 Magento Inc. (http://www.magentocommerce.com)
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
+ * REMOVED LINES:: 34: 
+ *                <h3><?php echo $this->__('Contact Information') ?></h3>
  */
+
 ?>
-<section class="col2-set">
+<section class="col1-set">
     <section class="col-1">
         <section class="box">
             <section class="box-title">
-                <h3><?php echo $this->__('Contact Information') ?></h3>
                 <a href="<?php echo $this->getUrl('customer/account/edit') ?>"><?php echo $this->__('Edit') ?></a>
             </section>
             <section class="box-content">
@@ -39,5 +41,5 @@
                 </p>
             </section>
         </section>
-    </section>section
+    </section>
 </section>
