--- a/app/design/frontend/base/default/template/customer/account/dashboard/address.phtml
+++ b/app/design/frontend/base/default/template/customer/account/dashboard/address.phtml
@@ -31,7 +31,8 @@
         </div>
 
         <div class="box-content">
-			<div class="col2-set">	                
+	
+			<div class="half-wrapper">	                
 				<div class="col-1">
 					<p><?php echo $this->__('Billing') ?></p>
 				</div>
@@ -44,9 +45,9 @@
 				</div>
 			</div>
 
-			<div class="col2-set">
+			<div class="half-wrapper">
 				<div class="col-1">
-                	<h4><?php echo $this->__('Shipping') ?></h4>
+                	<p><?php echo $this->__('Shipping') ?></p>
 				</div>
 			
 				<div class="col-2">
@@ -56,6 +57,7 @@
 	                </address>
 				</div>
 			</div> 	
+			
         </div>
     </div>
 </div>
