--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -1121,6 +1121,8 @@ tr.summary-details-excluded { font-style:italic; }
 /* Block: Tags */
 .dashboard .box-tags .number { float:left; font-size:10px; font-weight:bold; line-height:1; color:#fff; margin:3px -20px 0 0; padding:2px 3px; background:#ddd; }
 .dashboard .box-tags .details { margin-left:20px; }
+
+.half-wrapper {width: 50%; float: left;}
 /********** Dashboard > */
 
 /* Address Book */
