User dashboard blocks

--- a/app/design/frontend/base/default/template/customer/account/dashboard/address.phtml
+++ b/app/design/frontend/base/default/template/customer/account/dashboard/address.phtml
@@ -32,7 +32,7 @@
 
         <div class="box-content">
 	
-			<div class="half-wrapper">	                
+			<div class="half-col">	                
 				<div class="col-1">
 					<p><?php echo $this->__('Billing') ?></p>
 				</div>
@@ -45,7 +45,7 @@
 				</div>
 			</div>
 
-			<div class="half-wrapper">
+			<div class="half-col">
 				<div class="col-1">
                 	<p><?php echo $this->__('Shipping') ?></p>
 				</div>
