sections in dashboard

--- a/app/design/frontend/base/default/template/customer/account/dashboard.phtml
+++ b/app/design/frontend/base/default/template/customer/account/dashboard.phtml
@@ -31,7 +31,7 @@
     <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
     <?php echo $this->getChildHtml('hello') ?>
     <?php echo $this->getChildHtml('top') ?>
-    <div class="box-account box-info">
+    <div class="half-col">
         <div class="box-head">
             <h2><?php echo $this->__('Account Information') ?></h2>
         </div>
