--- a/app/design/frontend/base/default/template/customer/account/dashboard/address.phtml
+++ b/app/design/frontend/base/default/template/customer/account/dashboard/address.phtml
@@ -34,7 +34,7 @@
 	
 			<div class="half-col">	                
 				<div class="col-1 third">
-					<p><?php echo $this->__('Billing') ?></p>
+					<p><strong><?php echo $this->__('Billing') ?></strong></p>
 				</div>
 
                 <div class="col-2 twothird">
@@ -44,10 +44,12 @@
 	                </address>
 				</div>
 			</div>
-
+			
+			<div class="clear"></div>
+			
 			<div class="half-col">
 				<div class="col-1 third">
-                	<p><?php echo $this->__('Shipping') ?></p>
+                	<p><strong><?php echo $this->__('Shipping') ?></strong></p>
 				</div>
 				
 				<div class="col-2 twothird">
