--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -130,8 +130,13 @@ ul,ol         { list-style:none; }
 .col4-set .col-4 { float:right; width:23.5%; }
 
 .half-col {width: 50%; float: left;}
-.half-col .col-1{width: 15%; float: left;}
-.half-col .col-2{width: 85%; float: right;}
+.half-col .col-1{float: left;}
+.half-col .col-2{float: right;}
+
+.third {width:33%;}
+.twothird {width: 66%;}
+
+
 
 .clear {clear:both;}
 
