--- a/app/design/frontend/base/default/template/customer/account/dashboard/address.phtml
+++ b/app/design/frontend/base/default/template/customer/account/dashboard/address.phtml
@@ -26,13 +26,9 @@
 ?>
 <div class="col1-set">
     <div class="box">
-        <div class="box-title">
-            <a href="<?php echo $this->getAddressBookUrl() ?>"><?php echo $this->__('Manage') ?></a>
-        </div>
-
         <div class="box-content">
-	
-			<div class="half-col">	                
+	            <h2><?php echo $this->__('Address Book') ?></h2>
+			<div class="half-col left">	                
 				<div class="col-1 third">
 					<p><strong><?php echo $this->__('Billing') ?></strong></p>
 				</div>
@@ -47,7 +43,7 @@
 			
 			<div class="clear"></div>
 			
-			<div class="half-col">
+			<div class="half-col left">
 				<div class="col-1 third">
                 	<p><strong><?php echo $this->__('Shipping') ?></strong></p>
 				</div>
