--- a/app/design/frontend/base/default/template/customer/account/dashboard/address.phtml
+++ b/app/design/frontend/base/default/template/customer/account/dashboard/address.phtml
@@ -24,7 +24,10 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-<div class="col1-set">
+
+<div class="clear"></div>
+
+<div class="half-col left">
     <div class="box">
         <div class="box-content">
 	            <h2><?php echo $this->__('Address Book') ?></h2>
