--- a/app/design/frontend/base/default/template/customer/account/dashboard/info.phtml
+++ b/app/design/frontend/base/default/template/customer/account/dashboard/info.phtml
@@ -27,7 +27,7 @@
  */
 
 ?>
-<div class="half-col">
+<div class="half-col d-account">
            <a href="<?php echo $this->getUrl('customer/account/edit') ?>"><?php echo $this->__('Edit') ?></a>
        <div class="box-content">
            <p>
