--- a/app/design/frontend/base/default/template/customer/account/dashboard/address.phtml
+++ b/app/design/frontend/base/default/template/customer/account/dashboard/address.phtml
@@ -31,6 +31,7 @@
     <div class="box">
         <div class="box-content">
 	            <h2><?php echo $this->__('Address Book') ?></h2>
+	            <a href="<?php echo $this->getAddressBookUrl() ?>"><?php echo $this->__('Manage') ?></a>
 			<div class="half-col left">	                
 				<div class="col-1 third">
 					<p><strong><?php echo $this->__('Billing') ?></strong></p>
@@ -39,7 +40,6 @@
                 <div class="col-2 twothird">
 	                <address>
 	                    <?php echo $this->getPrimaryBillingAddressHtml() ?><br />
-	                    <a href="<?php echo $this->getPrimaryBillingAddressEditUrl() ?>"><?php echo $this->__('Edit Address') ?></a>
 	                </address>
 				</div>
 			</div>
@@ -54,7 +54,6 @@
 				<div class="col-2 twothird">
 	                <address>
 	                    <?php echo $this->getPrimaryShippingAddressHtml() ?><br />
-	                    <a href="<?php echo $this->getPrimaryShippingAddressEditUrl() ?>"><?php echo $this->__('Edit Address') ?></a>
 	                </address>
 				</div>
 			</div> 	
