--- a/app/design/frontend/base/default/template/customer/account/dashboard/address.phtml
+++ b/app/design/frontend/base/default/template/customer/account/dashboard/address.phtml
@@ -31,7 +31,7 @@
     <div class="box">
         <div class="box-content">
 	            <h2><?php echo $this->__('Address Book') ?></h2>
-	            <a href="<?php echo $this->getAddressBookUrl() ?>"><?php echo $this->__('Manage') ?></a>
+	            <a class="editable right" href="<?php echo $this->getAddressBookUrl() ?>"><?php echo $this->__('Manage') ?></a>
 			<div class="half-col left">	                
 				<div class="col-1 third">
 					<p><strong><?php echo $this->__('Billing') ?></strong></p>
