--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -1128,7 +1128,8 @@ tr.summary-details-excluded { font-style:italic; }
 
 /* Block: Account Information */
 .dashboard .box-info {}
-.d-account {border: 1px 0 0 0 solid #000;}
+.d-account {border-top: 1px solid #000;}
+.editable {border-bottom: 1px solid #000;}
 
 /* Block: Reviews */
 .dashboard .box-reviews .number { float:left; font-size:10px; font-weight:bold; line-height:1; color:#fff; margin:3px -20px 0 0; padding:2px 3px; background:#ddd; }
