--- a/app/design/frontend/base/default/template/customer/account/dashboard/info.phtml
+++ b/app/design/frontend/base/default/template/customer/account/dashboard/info.phtml
@@ -27,7 +27,7 @@
  */
 
 ?>
-<div class="half-col d-account">
+<div class="half-col">
        <div class="box-content">
            <p>
                <?php echo $this->htmlEscape($this->getCustomer()->getName()) ?><br />
